--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      <h1>{{title}}</h1>
+      <h1>I am working!</h1>
       
     </div>
   </div>
 </div>
 
-{{title}}
